pod-with-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: holiday-api-service
spec:
  clusterIP: None
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: holiday-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: holiday-api-ingress
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8080}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=ASX-EKS,Team=Group1
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: "/holiday/20231225"
    alb.ingress.kubernetes.io/healthcheck-port: "8080"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: holiday-api-service
                port: 
                  number: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: holiday-api-deployment
spec:
  selector:
    matchLabels:
      app: holiday-api
  replicas: 3
  template:
    metadata:
      labels:
        app: holiday-api
    spec:
      containers:
      - name: holiday-api
        image: <>.dkr.ecr.us-west-2.amazonaws.com/<>:v1
        ports:
         - containerPort: 8080
